adicionei um paragrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>olá,Mundo</h1>
   <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quaerat, fugit porro quibusdam commodi sed enim quod at fugiat architecto doloremque sequi obcaecati laborum ad! Voluptatum earum ut porro harum.</p>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi adipisci vel suscipit, quam eius corrupti nam dolorum recusandae illum eos laboriosam quae officia autem odit incidunt eligendi, nihil, voluptates accusamus.</p>
 </body>
 </html>
